Added components.html, Fixed jquery src for file protocol

--- a/index.html
+++ b/index.html
@@ -1,41 +1,41 @@
 <!DOCTYPE html>
 <html>
-<head>
-<meta http-equiv="content-type" content="text/html; charset=UTF-8">
-  <title>Bootstrap boilerplate</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link href="css/style.css" type="text/css" rel="stylesheet">
-  <script type="text/javascript" src="//code.jquery.com/jquery-latest.min.js"></script>
-  <script type="text/javascript" src="bootstrap/dist/js/bootstrap.min.js"></script>
-</head>
-<body>
+  <head>
+  <meta http-equiv="content-type" content="text/html; charset=UTF-8">
+    <title>Bootstrap boilerplate</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="css/style.min.css" type="text/css" rel="stylesheet">
+    <script type="text/javascript" src="http://code.jquery.com/jquery-latest.min.js"></script>
+    <script type="text/javascript" src="bootstrap/dist/js/bootstrap.min.js"></script>
+  </head>
+  <body>
 
-<nav class="navbar navbar-inverse" role="navigation">
+  <nav class="navbar navbar-inverse" role="navigation">
+    <div class="container">
+      <div class="navbar-header">
+        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-collapse">
+          <span class="sr-only">Toggle navigation</span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+        </button>
+        <a class="navbar-brand" href="#">Brand</a>
+      </div>
+
+      <div class="collapse navbar-collapse" id="navbar-collapse">
+        <ul class="nav navbar-nav">
+          <li><a href="#">Home</a></li>
+        </ul>
+      </div>
+    </div>
+  </nav>
+
   <div class="container">
-    <div class="navbar-header">
-      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-collapse">
-        <span class="sr-only">Toggle navigation</span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-      </button>
-      <a class="navbar-brand" href="#">Brand</a>
-    </div>
-
-    <div class="collapse navbar-collapse" id="navbar-collapse">
-      <ul class="nav navbar-nav">
-        <li><a href="#">Home</a></li>
-      </ul>
+    <div class="row">
+      <div class="col-md-12">
+      </div>
     </div>
   </div>
-</nav>
 
-<div class="container">
-  <div class="row">
-    <div class="col-md-12">
-    </div>
-  </div>
-</div>
-
-</body>
+  </body>
 </html>
